--- a/package.json
+++ b/package.json
@@ -24,21 +24,17 @@
     "grunt-babel": "^5.0.1",
     "grunt-contrib-connect": "0.10.1",
     "grunt-eslint": "15.0.0",
-    "grunt-mocha-test": "0.12.7",
     "grunt-open": "0.2.3",
     "grunt-shell-spawn": "0.3.8",
     "grunt-webpack": "^1.0.10",
     "load-grunt-configs": "0.4.3",
     "matchdep": "^0.3.0",
-    "mocha": "2.2.4",
     "node-libs-browser": "^0.5.2",
     "node-sass": "^3.2.0",
     "react-hot-loader": "^1.2.7",
     "sass-loader": "^1.0.2",
-    "sinon": "1.14.1",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.6",
-    "webpack": "^1.10.0",
-    "webpack-dev-server": "^1.10.1"
+    "webpack": "^1.10.0"
   }
 }
